# QGimbal

./: .mxproject  CMakeLists.txt  DEVELOPMENT_MANUAL.md  QGimbal.ioc
.claude/: settings.json
App/: DebugTask.cpp  GimbalTask.cpp  TransmitTask.cpp  task_public.h
Core/Inc/: main.h  stm32f4xx_it.h
Core/Src/: freertos.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c
MDK-ARM/: QGimbal.uvguix.62705  QGimbal.uvoptx  QGimbal.uvprojx
MDK-ARM/RTE/_QGimbal/: RTE_Components.h
UserLib/BMI088/: CMakeLists.txt  IMU_Task.cpp  IMU_Task.h  PID.h  bsp_imu_pwm.c  bsp_imu_pwm.h
UserLib/Gimbal/: Gimbal.h
cmake/stm32cubemx/: CMakeLists.txt
